--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="com.rm.mycareer" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
 
     <application
@@ -16,13 +13,30 @@
         <activity
             android:name="com.rm.mycareer.LandingPage"
             android:label="@string/app_name"
-            android:theme="@style/myCareerTheme.NoActionBar">
+            android:theme="@style/myCareerTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.rm.mycareer.view.PersonalityView"
+            android:theme="@style/myCareerTheme"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        <provider android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280"
+            android:name="com.facebook.NativeAppCallContentProvider" />
     </application>
+
+    <meta-data android:name="AA_DB_NAME" android:value="mcla.db" />
+    <meta-data android:name="AA_DB_VERSION" android:value="1" />
 
 </manifest>
