Personality View using Fragments

--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
 
         <activity android:name="com.rm.mycareer.view.PersonalityView"
-            android:theme="@style/myCareerTheme"
+            android:theme="@style/Theme.Mycareer"
             android:screenOrientation="portrait">
         </activity>
 
