--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/myCareerTheme" >
+        android:theme="@style/myCareerTheme"
+        android:name="com.rm.mycareer.myCareer">
         <activity
             android:name="com.rm.mycareer.LandingPage"
             android:label="@string/app_name"
