--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rm.mycareer" >
+    package="com.rm.mycareer">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -23,21 +23,34 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.rm.mycareer.view.PersonalityView"
+        <activity
+            android:name="com.rm.mycareer.view.PersonalityView"
             android:theme="@style/Theme.Mycareer"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.facebook.LoginActivity"
+        <activity
+            android:name="com.rm.mycareer.view.PersonalityCompleteView"
+            android:theme="@style/myCareerTheme"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <provider android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280"
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        <provider
+            android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280"
             android:name="com.facebook.NativeAppCallContentProvider" />
     </application>
 
-    <meta-data android:name="AA_DB_NAME" android:value="mcla.db" />
-    <meta-data android:name="AA_DB_VERSION" android:value="1" />
+    <meta-data
+        android:name="AA_DB_NAME"
+        android:value="mcla.db" />
+    <meta-data
+        android:name="AA_DB_VERSION"
+        android:value="1" />
 
 </manifest>
