Adding Cards styles and JSON lib

--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:screenOrientation="portrait"></activity>
 
         <activity
+            android:name="com.rm.mycareer.view.TrendingActivity"
+            android:theme="@style/Theme.Mycareer"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
             android:name="com.rm.mycareer.view.PersonalityCompleteView"
             android:theme="@style/myCareerTheme"
             android:screenOrientation="portrait" />
