--- a/libs/HoloGraphLibrary/build.gradle
+++ b/libs/HoloGraphLibrary/build.gradle
@@ -1,9 +1,7 @@
 apply plugin: 'android-library'
-
 android {
     compileSdkVersion 19
     buildToolsVersion '19.1.0'
-
     sourceSets {
         main {
             java.srcDirs = ['src']
@@ -11,4 +9,12 @@ android {
             manifest.srcFile 'AndroidManifest.xml'
         }
     }
+    defaultConfig {}
+    productFlavors {
+    }
+    buildTypes {
+    }
+}
+
+dependencies {
 }
