--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -4,18 +4,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <meta-data
+        android:name="android.app.default_searchable"
+        android:value=".app.Search" />
 
     <application
+        android:name="com.rm.mycareer.myCareer"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/myCareerTheme"
-        android:name="com.rm.mycareer.myCareer">
+        android:theme="@style/myCareerTheme">
         <activity
             android:name="com.rm.mycareer.LandingPage"
             android:label="@string/app_name"
-            android:theme="@style/myCareerTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/myCareerTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,30 +28,40 @@
 
         <activity
             android:name="com.rm.mycareer.view.PersonalityView"
-            android:theme="@style/Theme.Mycareer"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Mycareer"></activity>
 
         <activity
-            android:name="com.rm.mycareer.view.TrendingActivity"
-            android:theme="@style/Theme.Mycareer"
-            android:screenOrientation="portrait"></activity>
+            android:name=".view.SearchActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Mycareer">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="com.rm.mycareer.view.PersonalityCompleteView"
-            android:theme="@style/Theme.Mycareer"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Mycareer" />
+
+        <activity
+            android:name="com.rm.mycareer.view.ProfessionDetailsView"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Mycareer" />
 
         <activity
             android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
         <provider
-            android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280"
-            android:name="com.facebook.NativeAppCallContentProvider" />
+            android:name="com.facebook.NativeAppCallContentProvider"
+            android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280" />
     </application>
 
     <meta-data
@@ -57,5 +70,9 @@
     <meta-data
         android:name="AA_DB_VERSION"
         android:value="1" />
+
+    <meta-data
+        android:name="android.app.searchable"
+        android:resource="@xml/searchable" />
 
 </manifest>
