--- a/mycareer/build.gradle
+++ b/mycareer/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':libs/facebook')
     compile project(':libs/HoloGraphLibrary')
     compile project(':CardsUILib')
-    compile files('C:/Users/rapha_000/Documents/GitHub/myCareer/libs/gson-2.2.4.jar')
-    compile files('C:/Users/rapha_000/Documents/GitHub/myCareer/libs/java-json.jar')
+    compile files('C:/Users/vntramo/Documents/GitHub/myCareer-master/libs/gson-2.2.4.jar')
+    compile files('C:/Users/vntramo/Documents/GitHub/myCareer-master/libs/java-json.jar')
     compile 'com.android.support:appcompat-v7:19.+'
 }
