--- a/mycareer/src/main/AndroidManifest.xml
+++ b/mycareer/src/main/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:theme="@style/Theme.Mycareer" />
 
         <activity
+            android:name="com.rm.mycareer.view.TrendingActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Mycareer" />
+
+        <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
